[gd_scene load_steps=24 format=3 uid="uid://cnjmi0oabpifi"]

[ext_resource type="Script" path="res://scripts/level_1/level_1_main.gd" id="1_2r2tr"]
[ext_resource type="Texture2D" uid="uid://b6xc8csuuhutd" path="res://res/MAPA_JOGO.jpg" id="1_woosl"]
[ext_resource type="Texture2D" uid="uid://dlv0e3hvm6es5" path="res://res/grid.png" id="2_bqu4j"]
[ext_resource type="Texture2D" uid="uid://da8if3xp7bvsc" path="res://res/selection.png" id="3_n66dx"]
[ext_resource type="Texture2D" uid="uid://ciifhkfrwevv1" path="res://res/selection_active.png" id="4_7u2s7"]
[ext_resource type="Script" path="res://scripts/level_1/map.gd" id="5_busbn"]
[ext_resource type="Texture2D" uid="uid://bmjnhcqpa4h1g" path="res://res/MAPA_JOGO_OV.png" id="6_61beh"]
[ext_resource type="Texture2D" uid="uid://dbryvpjdpfce5" path="res://res/SUN_SHINE.png" id="7_ftnky"]
[ext_resource type="Texture2D" uid="uid://yx5t6di3guma" path="res://res/SUN.png" id="8_hurj4"]
[ext_resource type="Texture2D" uid="uid://dftpo1aex8ah0" path="res://res/Rocket_70x170.png" id="9_awt4r"]
[ext_resource type="Script" path="res://scripts/level_1/rocket.gd" id="10_7ethw"]
[ext_resource type="PackedScene" uid="uid://diik6iqcg1u36" path="res://scenes/level_1/win_scene.tscn" id="12_68fdk"]
[ext_resource type="PackedScene" uid="uid://c14mclctv6ack" path="res://scenes/level_1/criar_path_set_num.tscn" id="12_cyy7x"]
[ext_resource type="PackedScene" uid="uid://c3pvrpj2n21cd" path="res://scenes/level_1/next_phase_scene.tscn" id="12_re1tg"]
[ext_resource type="PackedScene" uid="uid://btif7hfb7i3rc" path="res://scenes/level_1/lose_scene.tscn" id="13_2cdh5"]
[ext_resource type="Script" path="res://scripts/level_1/level_1_phases_manager.gd" id="15_3jtoy"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s07oj"]
texture = ExtResource("2_bqu4j")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d0is3"]
texture = ExtResource("3_n66dx")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_exlpe"]
texture = ExtResource("4_7u2s7")
texture_region_size = Vector2i(70, 70)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ushug"]
tile_size = Vector2i(70, 70)
sources/2 = SubResource("TileSetAtlasSource_d0is3")
sources/1 = SubResource("TileSetAtlasSource_s07oj")
sources/3 = SubResource("TileSetAtlasSource_exlpe")

[sub_resource type="Animation" id="Animation_useid"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SunShine:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fkius"]
resource_name = "sun_shine"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SunShine:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1.68179, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.454902), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_upr88"]
_data = {
"RESET": SubResource("Animation_useid"),
"sun_shine": SubResource("Animation_fkius")
}

[node name="Level_1" type="Node2D"]
script = ExtResource("1_2r2tr")

[node name="MapSpr" type="Sprite2D" parent="."]
texture = ExtResource("1_woosl")
centered = false

[node name="Map" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ushug")
format = 2
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 720896, 1, 0, 786432, 1, 0, 851968, 1, 0, 65537, 1, 0, 131073, 1, 0, 196609, 1, 0, 262145, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 786433, 1, 0, 851969, 1, 0, 65538, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 327682, 1, 0, 393218, 1, 0, 458754, 1, 0, 524290, 1, 0, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 786434, 1, 0, 851970, 1, 0, 65539, 1, 0, 131075, 1, 0, 196611, 1, 0, 262147, 1, 0, 327683, 1, 0, 393219, 1, 0, 458755, 1, 0, 524291, 1, 0, 589827, 1, 0, 655363, 1, 0, 720899, 1, 0, 786435, 1, 0, 851971, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 1, 0, 327684, 1, 0, 393220, 1, 0, 458756, 1, 0, 524292, 1, 0, 589828, 1, 0, 786436, 1, 0, 851972, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 1, 0, 524293, 1, 0, 589829, 1, 0, 786437, 1, 0, 851973, 1, 0, 65542, 1, 0, 131078, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 1, 0, 524294, 1, 0, 589830, 1, 0, 655366, 1, 0, 720902, 1, 0, 786438, 1, 0, 851974, 1, 0, 65543, 1, 0, 131079, 1, 0, 327687, 1, 0, 393223, 1, 0, 458759, 1, 0, 524295, 1, 0, 589831, 1, 0, 655367, 1, 0, 720903, 1, 0, 786439, 1, 0, 851975, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 1, 0, 589832, 1, 0, 655368, 1, 0, 720904, 1, 0, 786440, 1, 0, 851976, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 1, 0, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 786441, 1, 0, 851977, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 1, 0, 393226, 1, 0, 458762, 1, 0, 524298, 1, 0, 589834, 1, 0, 655370, 1, 0, 720906, 1, 0, 786442, 1, 0, 851978, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 1, 0, 458763, 1, 0, 524299, 1, 0, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 786443, 1, 0, 851979, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 1, 0, 458764, 1, 0, 524300, 1, 0, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 786444, 1, 0, 851980, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 1, 0, 327693, 1, 0, 393229, 1, 0, 458765, 1, 0, 524301, 1, 0, 851981, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 1, 0, 327694, 1, 0, 393230, 1, 0, 458766, 1, 0, 524302, 1, 0, 851982, 1, 0, 65551, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 393231, 1, 0, 458767, 1, 0, 524303, 1, 0, 851983, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 393232, 1, 0, 458768, 1, 0, 524304, 1, 0, 851984, 1, 0, 65553, 1, 0, 327697, 1, 0, 393233, 1, 0, 458769, 1, 0, 524305, 1, 0, 589841, 1, 0, 655377, 1, 0, 720913, 1, 0, 786449, 1, 0, 851985, 1, 0, 65554, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 1, 0, 524306, 1, 0, 589842, 1, 0, 655378, 1, 0, 720914, 1, 0, 786450, 1, 0, 851986, 1, 0, 65555, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 720915, 1, 0, 786451, 1, 0, 851987, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 1, 0, 458772, 1, 0, 524308, 1, 0, 720916, 1, 0, 786452, 1, 0, 851988, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 1, 0, 458773, 1, 0, 524309, 1, 0, 720917, 1, 0, 786453, 1, 0, 851989, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 327702, 1, 0, 393238, 1, 0, 458774, 1, 0, 524310, 1, 0, 589846, 1, 0, 655382, 1, 0, 720918, 1, 0, 786454, 1, 0, 851990, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 393239, 1, 0, 458775, 1, 0, 524311, 1, 0, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 393240, 1, 0, 458776, 1, 0, 524312, 1, 0, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 786456, 1, 0, 851992, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 1, 0, 393241, 1, 0, 458777, 1, 0, 524313, 1, 0, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0, 786457, 1, 0, 851993, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 1, 0, 393242, 1, 0, 458778, 1, 0, 524314, 1, 0, 589850, 1, 0, 655386, 1, 0, 720922, 1, 0, 786458, 1, 0, 851994, 1, 0, 655360, 1, 0)
layer_1/tile_data = PackedInt32Array()
layer_2/tile_data = PackedInt32Array()
script = ExtResource("5_busbn")

[node name="MapSprOv" type="Sprite2D" parent="."]
texture = ExtResource("6_61beh")
centered = false

[node name="SunShine" type="Sprite2D" parent="."]
texture = ExtResource("7_ftnky")
centered = false

[node name="Sun" type="Sprite2D" parent="."]
texture = ExtResource("8_hurj4")
centered = false

[node name="PathLine" type="Line2D" parent="."]
unique_name_in_owner = true
default_color = Color(1, 0, 0, 1)
joint_mode = 2
begin_cap_mode = 1
end_cap_mode = 2

[node name="Rocket" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_awt4r")
script = ExtResource("10_7ethw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_upr88")
}
autoplay = "sun_shine"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NextPhaseScene" parent="CanvasLayer" instance=ExtResource("12_re1tg")]
unique_name_in_owner = true
visible = false

[node name="CriarPath" parent="CanvasLayer" instance=ExtResource("12_cyy7x")]
unique_name_in_owner = true

[node name="WinScene" parent="CanvasLayer" instance=ExtResource("12_68fdk")]
unique_name_in_owner = true
visible = false

[node name="LoseScene" parent="CanvasLayer" instance=ExtResource("13_2cdh5")]
unique_name_in_owner = true
visible = false

[node name="Level1PhasesManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("15_3jtoy")
